Implement tab switching.

--- a/tabs/html/tabs.html
+++ b/tabs/html/tabs.html
@@ -9,7 +9,35 @@
 
   <body>
 
-    <ul class="tabs"></ul>
+    <ul class="tabs" data-content-tabs=".content-tabs">
+      <li>
+        <a href="#pit-bull" class="active">Pit Bull</a>
+      </li>
+      <li>
+        <a href="#shiba-inu">Shiba Inu</a>
+      </li>
+      <li>
+        <a href="#pug">Pug</a>
+      </li>
+    </ul>
+
+    <section class="content-tabs">
+      <article id="pit-bull" class="active">
+        <p>
+        The American Staffordshire Terrier is a people-oriented dog who thrives when he is part of a family. They are intelligent, graceful, loyal, feisty, courageous, and very, very strong. Amstaffs are an active breed, always ready for fun, and they love to play outdoors. They are high energy and need regular exercise. They can be rowdy and overly exuberant, especially when they are young. They do best when they have a job to do. A bored Amstaff will destroy your house. They do well in obedience, agility, tracking, and conformation. Obedience training is very important with this breed. They really need an interactive owner who will spend time with them, training them and playing with them and just being their best friend. But they also need an owner who is able to establish leadership, as Amstaffs definitely have a mind of their own. Amstaffs are protective and they look imposing so they can make an effective deterrent, but they are really too friendly to be guard dogs. Some Amstaffs are dog aggressive and none will back down if challenged. Amstaffs love their children and are patient, gentle, and tolerant. Of course, very young children should always be supervised around any dog. This is an animal who will strive to please you and take great pride in making you laugh. He will demand a lot of your attention and will be an excellent companion, for you and your family.
+        </p>
+      </article>
+      <article id="shiba-inu">
+        <p>
+          The Shiba Inu is a unique breed. Intelligent, active, energetic, they think pretty highly of themselves. They are famous for their spirited boldness and independent nature. If you are not careful, they will train you. Early obedience training is important, but even then, Shibas don't really enjoy being obedient. Off leash work is especially challenging and the recall might require a miracle. They love to run and they love to run away. They are escape artists and owners must be careful every single time they open a door because they will bolt. Some can even climb chain link fences. Shibas have been known to disappear for days at a time. They will hunt mice, squirrels, and other small animals if they can. Shibas need regular exercise but a spirited 30 minute walk each day should suffice. They are good watchdogs and only bark when there is a reason. They are reserved toward strangers. They tend to be aggressive toward other dogs, and can coexist peacefully with cats, but if a cat runs away, there's a good chance the Shiba will chase it. Shibas will do well with older, well-behaved children, but some are afraid of young children and alarmed by their squeals and quick movements. Many Shibas will run and hide from toddlers. If the toddler pursues the dog, it could easily result in a fear-biting incident. While a Shiba can be sweet, you will earn whatever affection you get. They are not lapdogs and prefer to sit beside you, not on you. They are not particularly cuddly and don't really like to be held. They spend a lot of time on their own, enjoying some quiet solitude. Because they don't really like to be touched or handled, grooming can be a real challenge. They are generally quiet, but do possess the Shiba scream -- a high-pitched banshee call. They let this scream go whenever they are unhappy, and it can be a bit embarrassing. They can be a bit of a drama queen. But despite all of the breed's idiosyncrasies, Shiba owners will tell you they are the best breed in the world: funny, loyal, playful and fast to housetrain. So if you want a dog who thinks he's smarter than you, and will try to push your buttons, then you might consider the beautiful, athletic, energetic Shiba. Such shibe.
+        </p>
+      </article>
+      <article id="pug">
+        <p>
+          Pugs are small dogs with big personalities. They live to love and to be loved and were bred for one reason: to be your companion. They will try to live in your lap, eat your food, and sleep on your bed. They are incredibly playful, outgoing, adaptable, happy, lively, and affectionate. They need human companionship to survive, and will not do well at all if left alone for long periods of time. Your Pug will want and need to be part of your family. A Pug will spend his life by your side, every moment of it. They are excellent with children and are usually good with other animals in the household. Pugs are low-activity dogs. They enjoy the daily walk, but don't need hours of exercise each day. They don't like water (most cannot swim) and they don't like Frisbees or balls. They like to lie in your lap instead. You will need to be careful that your Pug doesn't exercise to the point of overheating. You will have to be especially vigilant on hot and humid days. Pugs, due to their flat faces, simply cannot tolerate extreme temperatures and can die in a short period of time. They should never be left outside unattended. They love to eat (and eat and eat!), and so are prone to obesity. So you need to watch how much you feed them and get them doing some exercise. They are intelligent and trainable, but are often slow to housetrain. They are also not car-smart and will be safest in a fenced-in yard. In short, these affectionate little guys live to please you, and they expect to be the center of attention. They are funny, cocky, sensitive, and cuddly. But you should know that they tend to sneeze, snort, and snore ... and fart ... a lot. Hey, at least they don't bark much!
+        </p>
+      </article>
+    </section>
 
     <script>
       $(function() {
