Implement scrolling thumbnails.

--- a/thumbnails/html/thumbnails.html
+++ b/thumbnails/html/thumbnails.html
@@ -8,14 +8,27 @@
   <body>
 
     <div class="thumbnails">
-      <div class="active">
-      </div>
-      <div class="gutter-images group">
-        <img src="http://placecorgi.com/300/300">
-        <img src="http://placehold.it/300x300">
-        <img src="http://placecorgi.com/300/300">
-        <img src="http://placehold.it/300x300">
-        <img src="http://placecorgi.com/300/300">
+      <div class="active"></div>
+      <div class="gutter group">
+        <a href="#" class="nav">&lt;</a>
+        <div class="gutter-images group">
+          <img src="http://placecorgi.com/400/400">
+          <img src="http://placehold.it/400x400">
+          <img src="http://placecorgi.com/400/400">
+          <img src="http://placehold.it/400x400">
+          <img src="http://placecorgi.com/400/400">
+          <img src="http://placecorgi.com/400/400">
+          <img src="http://placehold.it/400x400">
+          <img src="http://placecorgi.com/400/400">
+          <img src="http://placehold.it/400x400">
+          <img src="http://placecorgi.com/400/400">
+          <img src="http://placecorgi.com/400/400">
+          <img src="http://placehold.it/400x400">
+          <img src="http://placecorgi.com/400/400">
+          <img src="http://placehold.it/400x400">
+          <img src="http://placecorgi.com/400/400">
+        </div>
+        <a href="#" class="nav">&gt;</a>
       </div>
     </div>
 
